Add ability to overlay bounding box

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ python = "^3.9"
 toml = "^0.10.2"
 wf-video-io = ">=3.4.2"
 wf-honeycomb-io = ">=2.1.1"
+wf-cv-utils = ">=3.6.0"
 pandas = ">=2.0"
 ffmpeg-python = ">=0.2.0"
 tqdm = ">=4.65.0"
