--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ wf-honeycomb-io = ">=2.1.1"
 wf-cv-utils = ">=3.6.0"
 pandas = ">=2.0"
 ffmpeg-python = ">=0.2.0"
+labelbox = ">=3.49.1"
 tqdm = ">=4.65.0"
 
 [tool.poetry.group.dev.dependencies]
